@@ -1,9 +1,0 @@
-Obsoletes: pupmod-vnc-test >= 0.0.1
-Requires: pupmod-puppetlabs-stdlib < 5.0.0-0
-Requires: pupmod-puppetlabs-stdlib >= 4.13.1-0
-Requires: pupmod-simp-simplib >= 3.1.0-0
-Requires: pupmod-simp-simplib < 4.0.0-0
-Requires: pupmod-simp-xinetd < 5.0.0-0
-Requires: pupmod-simp-xinetd >= 4.0.0-0
-Requires: pupmod-simp-gdm >= 7.0.0-0
-Requires: pupmod-simp-gdm < 8.0.0-0
